Rename classes. Remove GA.

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </ul>
 
 
-            <h3>current main color</h3>
+            <h3>primary brand color</h3>
 
-            <div class="color-holder main-color-background"></div>
+            <div class="color-holder color-brand-primary"></div>
 
             <h3>SASS Functions</h3>
 
@@ -76,12 +76,5 @@
         <script src="html5boilerplate/js/plugins.js"></script>
         <script src="html5boilerplate/js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
     </body>
 </html>
