adding classes for secondary, darken and lighten and show them in the demo

--- a/index.html
+++ b/index.html
@@ -54,20 +54,27 @@
 
 
             <h3>primary brand color</h3>
-
             <div class="color-holder color-brand-primary"></div>
 
+            <h3>secondary brand color</h3>
+            <div class="color-holder color-brand-secondary"></div>
+
             <h3>SASS Functions</h3>
+            <p>All functions refer to primary brand color.</p>
 
             <h4>invert</h4>
-
             <div class="color-holder sass-function-invert"></div>
 
             <h4 name="mix">mix</h4>
-
             <div class="color-holder sass-function-mix"></div>
 
-            <a href="www.trio-interactive.de" target="_blank">another target "blank" link</a>
+            <h4>darken</h4>
+            <div class="color-holder sass-function-darken"></div>
+
+            <h4>lighten (with border to show)</h4>
+            <div class="color-holder sass-function-lighten debug"></div>
+
+            <a href="www.trio-interactive.de" target="_blank">an external target "blank" link</a>
 
         </div>
 
