Update gitignore to ignore DS_Store. Switch to uncompressed compiled css (better to debug). Use inuitcss beautons.
Signed-off-by: Paul Vincent Beigang <pbeigang@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="styles/style.min.css">
+        <link rel="stylesheet" href="styles/style.css">
         <script src="html5boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -41,7 +41,12 @@
                 <li>Schatten</li>
                 <li>Verläufe</li>
 
-                <li>Buttons</li>
+                <li>
+                    <h3>Buttons</h3>
+                    <div class="">
+                        <span class="btn btn--large">Button</span>
+                    </div>
+                </li>
                 <li>Tabs</li>
             </ul>
 
