Add basic button.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
             <h3>primary brand color</h3>
-            <div class="color-holder color-brand-primary"></div>
+            <div class="color-holder color-brand-primary-background"></div>
 
             <h3>secondary brand color</h3>
             <div class="color-holder color-brand-secondary"></div>
