Adjust wording to two fixed colors..⁄

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h1 class="icon-code">The Sass 1 color experiment</h1>
 
             <h2>
-                This project aims to explore the sass/compass color functions by using only one fixed color definition.
-                All other colors are based on this main color.
+                This project aims to explore the sass/compass color functions by using only two fixed color definitions.<br>
+                All other colors are based on these primary colors.
 
             </h2>
 
