--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h4>lighten (with border to show)</h4>
             <div class="color-holder sass-function-lighten debug"></div>
 
-            <a href="www.trio-interactive.de" target="_blank">an external target "blank" link</a>
+            <a href="http://www.trio-interactive.de" target="_blank">an external target "blank" link</a>
 
         </div>
 
